--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-url: https://cgw.institute
+url: https://paragon.club
 # baseurl: 
 
 
 
 # Site settings
-title: CGW Institute 
-email: support@digifaire.com
-description: "Developmental & Grant Writing Services"
+title: Paragon Club
+email: info@license.academy
+description: "The Art of Narrative: Storytelling for Ads, Books, Film & TV"
 
 
 # Team names, titles and social links
