--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-url: https://paragon.club
+url: https://carbonomics.ai
 # baseurl: 
 
 
 
 # Site settings
-title: Paragon Club
+title: Carbonomics AI
 email: info@license.academy
-description: "The Art of Narrative: Storytelling for Ads, Books, Film & TV"
+description: "Green Technology AI"
 
 
 # Team names, titles and social links
