--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://carbonomics.ai
 # Site settings
 title: Carbonomics AI
 email: info@license.academy
-description: "Green Technology AI"
+description: "Low-carbon Products"
 
 
 # Team names, titles and social links
